[gd_scene load_steps=8 format=3 uid="uid://b5w7p1y0g2f6x"]

[ext_resource type="Script" path="res://scenes/test/voxel_combat_test.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://dixie12345678" path="res://scenes/player/player.tscn" id="2_fghij"]
[ext_resource type="PackedScene" uid="uid://asdfghjkl123" path="res://scenes/battle_test/entities/enemy.tscn" id="3_klmno"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)

[node name="VoxelCombatTest" type="Node2D"]
script = ExtResource("1_abcde")

[node name="Player" parent="." instance=ExtResource("2_fghij")]
position = Vector2(200, 300)

[node name="Enemy" parent="." instance=ExtResource("3_klmno")]
position = Vector2(800, 300)

[node name="UI" type="CanvasLayer"]

[node name="LogPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="LogLabel" type="RichTextLabel" parent="UI/LogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
selection_enabled = true

[node name="PlayerStatusPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 300.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="PlayerStatusLabel" type="Label" parent="UI/PlayerStatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "玩家状态:"
vertical_alignment = 1

[node name="EnemyStatusPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -700.0
offset_top = -200.0
offset_right = -400.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="EnemyStatusLabel" type="Label" parent="UI/EnemyStatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "敌人状态:"
vertical_alignment = 1
